--- a/customHttp.yml
+++ b/customHttp.yml
@@ -17,7 +17,7 @@ customHeaders:
       - key: 'Content-Security-Policy'
         value: "default-src 'self';
                 object-src 'self';
-                style-src 'self';
+                style-src 'unsafe-inline';
                 img-src 'self' data: mydatahelps.org http://localhost:*;
                 media-src 'self';
                 frame-src 'self';
